feat : implement settings to input all the secrets from user

--- a/App/app.json
+++ b/App/app.json
@@ -8,9 +8,9 @@
         "homepage": "deeproyrs@gmail.com",
         "support": "deeproyrs@gmail.com"
     },
-    "name": "Code.Review.Assisstant",
-    "nameSlug": "codereviewassisstant",
-    "classFile": "CodeReviewAssisstantApp.ts",
+    "name": "Code.Review.Assistant",
+    "nameSlug": "codereviewassistant",
+    "classFile": "CodeReviewAssistantApp.ts",
     "description": "diinvfs",
     "implements": []
 }
